# drosophila_brain

./: .gitignore  AGENTS.md  README.md  config.py  main_advanced.py  test_validation.py  world_3d_demo.py
Python/: launch.sh  main.py  requirements.txt  world_3d_visual.py
Python/circuits/: __init__.py  antennal_lobe.py  interhemispheric.py
Python/learning/: reinforcement_learning.py
Python/pathways/: __init__.py  feedback_loops.py  motor_tracts.py  sensory_tracts.py
Python/utils/: stats.py
Python/visualization/: brain_3d.py
QT/: CMakeLists.txt
QT/src/: main.cpp
QT/src/core/: network.cpp  network.h
QT/src/render/: brainchart.cpp  brainchart.h  glwidget.cpp  glwidget.h
QT/src/ui/: mainwindow.cpp  mainwindow.h
QT/src/world/: world_3d.cpp  world_3d.h
circuits/: brain_vnc_interface.py  lateral_horn.py  mushroom_body.py
core/: __init__.py  network.py  neuron.py  synapse.py
data/: __init__.py  connectome_synthetic.py
learning/: __init__.py
utils/: __init__.py  io.py
visualization/: __init__.py  real_time_plot.py
vue connectome/: connectome_data.json  generateur_connectome_drosophila.py
world/: __init__.py  world.py  world_3d.py
